--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,19 @@
+header {
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  z-index: 10;
+}
+
+.header-container {
+  height: 100%;
+}
+
 ._container {
-  max-width: 1180px;
-  padding: 0 20px;
+  max-width: 1440px;
+  width: 90%;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .logo-block {
@@ -15,11 +27,12 @@
 .logo-block img {
   width: 80px;
   height: 80px;
+  margin-right: 20px;
 }
 .logo-block .header__text {
   max-width: 466px;
   font-family: "Roboto";
-  font-weight: bold;
+  font-weight: 700;
   font-size: 15px;
 }
 
@@ -43,4 +56,5 @@
 }
 .header__contact-inform a {
   margin: 0 5px;
+  padding: auto;
 }
