--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -1,10 +1,21 @@
 $maxWidthContainer: 1180px;
 $fontFamily: "Roboto";
 
+header {
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  z-index: 10;
+}
+
+.header-container {
+  height: 100%;
+}
 ._container {
-  max-width: 1180px;
-  padding: 0 20px;
+  max-width: 1440px;
+  width: 90%;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .logo-block {
@@ -13,11 +24,12 @@ $fontFamily: "Roboto";
   img {
     width: 80px;
     height: 80px;
+    margin-right: 20px;
   }
   .header__text {
     max-width: 466px;
     font-family: $fontFamily;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 15px;
   }
 }
@@ -33,5 +45,6 @@ $fontFamily: "Roboto";
   width: 100%;
   a {
     margin: 0 5px;
+    padding: auto;
   }
 }
