--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,7 @@ header {
   width: 100%;
   height: 100px;
   z-index: 10;
+  background-color: white;
 }
 
 .header-container {
@@ -10,8 +11,7 @@ header {
 }
 
 ._container {
-  max-width: 1440px;
-  width: 90%;
+  max-width: 1250px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -25,12 +25,11 @@ header {
           align-items: center;
 }
 .logo-block img {
-  width: 80px;
-  height: 80px;
+  width: 90px;
   margin-right: 20px;
 }
 .logo-block .header__text {
-  max-width: 466px;
+  width: 400px;
   font-family: "Roboto";
   font-weight: 700;
   font-size: 15px;
@@ -40,6 +39,10 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header__contact-inform {
@@ -57,4 +60,10 @@ header {
 .header__contact-inform a {
   margin: 0 5px;
   padding: auto;
+}
+
+.header__wrapper {
+  height: 100px;
+  width: 100%;
+  margin-bottom: 50px;
 }
