--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -3,7 +3,8 @@
 }
 
 .sidebar {
-  width: 100%;
+  position: sticky;
+  top: 150px;
 }
 
 .sidebar__menu {
@@ -95,4 +96,22 @@
   color: #b8b8b8;
   font-size: 15px;
   font-family: "Roboto";
+}
+
+.main__news-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 30px 0;
+  a {
+    background-color: #2bac0c;
+    color: white;
+    padding: 11px 20px;
+    box-sizing: border-box;
+    text-decoration: none;
+    border-radius: 3px;
+    font-family: "Roboto";
+    font-size: 15px;
+    font-weight: 100;
+  }
 }
