--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
 }
 
 .sidebar {
-  width: 100%;
+  position: sticky;
+  top: 150px;
 }
 
 .sidebar__menu {
@@ -114,4 +115,27 @@
   color: #b8b8b8;
   font-size: 15px;
   font-family: "Roboto";
+}
+
+.main__news-button {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 30px 0;
+}
+.main__news-button a {
+  background-color: #2bac0c;
+  color: white;
+  padding: 11px 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-decoration: none;
+  border-radius: 3px;
+  font-family: "Roboto";
+  font-size: 15px;
+  font-weight: 100;
 }
