--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -23,6 +23,7 @@
   font-size: 15px;
   color: black;
   text-decoration: none;
+  line-height: 24px;
 }
 
 .active-link {
@@ -103,15 +104,35 @@
   display: flex;
   justify-content: center;
   margin: 30px 0;
-  a {
+  span {
     background-color: #2bac0c;
     color: white;
     padding: 11px 20px;
     box-sizing: border-box;
     text-decoration: none;
     border-radius: 3px;
-    font-family: "Roboto";
     font-size: 15px;
     font-weight: 100;
+    z-index: 5;
+    font-family: "Roboto";
+    &:hover {
+      cursor: pointer;
+    }
   }
+}
+
+.main__post-hide {
+  opacity: 0;
+  height: 0;
+  transition-property: height, opacity;
+  transition-duration: 1s;
+  z-index: -1;
+}
+
+.main__hide-posts {
+  opacity: 0;
+  height: 0;
+  transition-property: height, opacity;
+  transition-duration: 1s;
+  z-index: -1;
 }
