--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@
   font-size: 15px;
   color: black;
   text-decoration: none;
+  line-height: 24px;
 }
 
 .active-link {
@@ -127,7 +128,7 @@
           justify-content: center;
   margin: 30px 0;
 }
-.main__news-button a {
+.main__news-button span {
   background-color: #2bac0c;
   color: white;
   padding: 11px 20px;
@@ -135,7 +136,31 @@
           box-sizing: border-box;
   text-decoration: none;
   border-radius: 3px;
-  font-family: "Roboto";
   font-size: 15px;
   font-weight: 100;
+  z-index: 5;
+  font-family: "Roboto";
+}
+.main__news-button span:hover {
+  cursor: pointer;
+}
+
+.main__post-hide {
+  opacity: 0;
+  height: 0;
+  -webkit-transition-property: height, opacity;
+  transition-property: height, opacity;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  z-index: -1;
+}
+
+.main__hide-posts {
+  opacity: 0;
+  height: 0;
+  -webkit-transition-property: height, opacity;
+  transition-property: height, opacity;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+  z-index: -1;
 }
