--- a/#source/scss/album-style.scss
+++ b/#source/scss/album-style.scss
@@ -36,3 +36,96 @@
     }
   }
 }
+
+.modal-window {
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.modal-slider__container {
+  left: 50%;
+  top: 25%;
+  transform: translateX(-50%);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 64px + 30px + 727px + 30px + 64px;
+  max-height: 409px;
+}
+
+.slider-wrapper {
+  max-width: 700px;
+  max-height: 410px;
+  overflow: hidden;
+  position: relative;
+  .slider-line {
+    display: flex;
+    position: relative;
+    transition: left 0.7s ease;
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.slider-buttons {
+  button {
+    width: 64px;
+    height: 64px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: none;
+    position: relative;
+    z-index: 111;
+    &:before {
+      content: "";
+      width: 15px;
+      height: 15px;
+      display: block;
+      border-left: 1px solid white;
+      border-bottom: 1px solid white;
+      position: absolute;
+    }
+  }
+  .prev-button::before {
+    left: 40%;
+    top: 40%;
+    transform: rotate(40deg);
+  }
+
+  .next-button::before {
+    right: 40%;
+    top: 40%;
+    transform: rotate(225deg);
+  }
+
+  .prev-button {
+    position: absolute;
+    transform: translateY(-50%);
+    left: 0;
+    top: 50%;
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+
+  .next-button {
+    position: absolute;
+    transform: translateY(-50%);
+    right: 0;
+    top: 50%;
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+}
