--- a/#source/scss/footer.scss
+++ b/#source/scss/footer.scss
@@ -76,3 +76,13 @@ footer {
   font-weight: 400;
   line-height: 18px;
 }
+
+@media screen and (max-width: 560px) {
+  .footer-title {
+    display: none;
+  }
+
+  .footer__inform-location {
+    display: none;
+  }
+}
