--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -26,14 +26,36 @@ header {
 
     margin-right: 20px;
   }
+
   .header__text {
     width: 400px;
     font-family: $fontFamily;
     font-weight: 700;
     font-size: 15px;
   }
+
+  @media screen and (max-width: 950px) {
+    .header__text {
+      font-size: 12px;
+    }
+  }
+  @media screen and (max-width: 560px) {
+    .header__text {
+      width: auto;
+      span {
+        display: none;
+      }
+    }
+  }
 }
 
+@media screen and (max-width: 560px) {
+  .logo-block {
+    img {
+      margin-right: 10px;
+    }
+  }
+}
 .header__content {
   display: flex;
   height: 100%;
@@ -58,4 +80,31 @@ header {
   height: 100px;
   width: 100%;
   margin-bottom: 50px;
+}
+
+.burger-button {
+  display: none;
+  flex-direction: column;
+  line-height: 7px;
+  font-size: 50px;
+  font-weight: 300;
+  &::before {
+    content: "_";
+  }
+  &::after {
+    content: "_";
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .header__contact-inform {
+    a {
+      display: none;
+    }
+  }
+
+  .burger-button {
+    display: flex;
+    margin-top: -40px;
+  }
 }
