--- a/css/footer.css
+++ b/css/footer.css
@@ -89,3 +89,13 @@ footer .footer__information-block img {
   font-weight: 400;
   line-height: 18px;
 }
+
+@media screen and (max-width: 560px) {
+  .footer-title {
+    display: none;
+  }
+
+  .footer__inform-location {
+    display: none;
+  }
+}
