--- a/#source/scss/about_us.scss
+++ b/#source/scss/about_us.scss
@@ -95,3 +95,21 @@
     transform: translateY(-100%);
   }
 }
+
+@media screen and (max-width: 950px) {
+  .inform-block {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .slider-buttons {
+    display: none;
+  }
+  .main__slider-block {
+    margin: 0;
+  }
+  .inform-block {
+    margin: 0;
+  }
+}
