--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -188,7 +188,7 @@ body {
     top: 0;
     left: 100vw;
     width: 100vw;
-    height: 100vw;
+    height: 100%;
     background: #fff;
     z-index: 100;
     transition: left 0.4s ease-out;
