--- a/css/media.css
+++ b/css/media.css
@@ -65,3 +65,17 @@
 .album .album__subtitle {
   margin-bottom: 10px;
 }
+@media screen and (max-width: 950px) {
+  .media__container {
+    margin: 0;
+  }
+}
+@media screen and (max-width: 560px) {
+  .media__album {
+    max-width: 100%;
+  }
+
+  .album .album__img {
+    max-width: 100%;
+  }
+}
