--- a/css/post-style.css
+++ b/css/post-style.css
@@ -58,3 +58,14 @@
 .title-path {
   margin-top: 10px;
 }
+
+@media screen and (max-width: 950px) {
+  .main__block {
+    margin: 0;
+  }
+  .main__block .main__content {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
