--- a/mainapp/templates/mainapp/posts/post_4.html
+++ b/mainapp/templates/mainapp/posts/post_4.html
@@ -19,7 +19,7 @@
       <div class="header-container _container">
         <div class="header__content">
           <div class="header__logo-block logo-block">
-            <a href="index.html"><img src="{% static 'img/logo.svg' %}" alt="logo" /></a>
+            <a href="{% url 'main' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" /></a>
 
             <span class="header__text">
               Информационный сайт о Каневском районе<span>
